# Project_DatVeXe

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2bd1400d12eb_merge_heads.py  7f4b2c3240f1_add_indexes.py  8863f13b4827_initial_migration.py  a1b2c3d4e5f6_add_user_id_to_bookings.py  b7ea3fea617e_add_user_permissions.py  cf110b0b0ffe_add_users_table.py
backend/app/: lifespan.py  main.py
backend/app/core/: config.py  database.py  seed.py
backend/app/models/: __init__.py  booking.py  bus_operator.py  bus_route.py  city.py  trip.py  user.py
backend/app/routers/: admin.py  ai.py  auth.py  booking.py  meta.py  trip.py  user_tickets.py
backend/app/schemas/: __init__.py  admin.py  auth.py  booking.py  camel.py  city.py  dashboard.py  error.py  route.py  trip.py
backend/app/services/: ai.py  auth.py  booking.py  dashboard.py  deps.py  trip.py
frontend/: index.html  package.json
frontend/src/: api.js  auth.js  main.jsx  styles.css  utils.js
frontend/src/components/: AIChatbot.jsx  AdminPage.jsx  App.jsx  BookingPage.jsx  Contact.jsx  LoginPage.jsx  MyTicketsPage.jsx  PaymentModal.jsx  ProfilePage.jsx  ProtectedRoute.jsx  RegisterPage.jsx  ReviewsSection.jsx  SeatMap.jsx  SuccessModal.jsx  TripCard.jsx  UI.jsx
