[project]
name = "vietride-api"
version = "0.1.0"
description = "VietRide X API - Python backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.1",
    "email-validator>=2.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
ai = ["google-genai>=1.0"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
